cabal-version: 3.0
name: chainweb-storage
version: 0.1.0.0
synopsis: Key Value Storage for Chainweb
description:
    Various tools for key value stores used in
    chainweb (https://github.com/kadena-io/chainweb-node
homepage: https://github.com/kadena-io/chainweb-storage
bug-reports: https://github.com/kadena-io/chainweb-storage/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (c) 2019, Kadena LLC
category: Data
tested-with:
    GHC==9.0.1
    GHC==8.10.4
    GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md
-- build-type: Custom

source-repository head
    type: git
    location: https://github.com/kadena-io/chainweb-storage.git

library
    hs-source-dirs: src
    cxx-sources: cpp/chainweb-rocksdb.cpp
    extra-libraries: stdc++

    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.CAS
        Data.CAS.Forgetful
        Data.CAS.HashMap
        Data.CAS.RocksDB
        Data.CAS.RocksDB.Iterator
        Database.RocksDB.C
        Database.RocksDB.Internal
        Database.RocksDB.Base
        Database.RocksDB.Types
        Data.DedupStore
    build-depends:
          base >=4.10 && <4.16
        , binary
        , bytestring >=0.10
        , containers >=0.5
        , cryptonite >= 0.25
        , directory >=1.3
        , filepath
        , deepseq >=1.4
        , exceptions >=0.10
        , hashable >=1.2
        , lens >=4.16
        , memory >=0.14
        , nothunks >= 0.1.0.0
        , stm >=2.4
        , streaming >=0.2
        , temporary >=1.3
        , text >=1.2
        , transformers >=0.5
        , unordered-containers >=0.2
        , vector >=0.12

    extra-libraries:
        snappy
        gflags
        z
        bz2
        -- lz4
        -- zstd
        tbb

    include-dirs:
        rocksdb
        rocksdb/include

    install-includes:
        memtable/skiplist.h
        memtable/inlineskiplist.h
        memtable/stl_wrappers.h

        hdfs/env_hdfs.h

        logging/auto_roll_logger.h
        logging/event_logger.h
        logging/posix_logger.h
        logging/log_buffer.h
        logging/logging.h
        logging/env_logger.h

        test_util/mock_time_env.h
        test_util/transaction_test_util.h
        test_util/testutil.h
        test_util/testharness.h
        test_util/sync_point.h
        test_util/sync_point_impl.h

        third-party/gtest-1.8.1/fused-src/gtest/gtest.h
        third-party/folly/folly/ScopeGuard.h
        third-party/folly/folly/lang/Align.h
        third-party/folly/folly/lang/Bits.h
        third-party/folly/folly/lang/Launder.h
        third-party/folly/folly/portability/Asm.h
        third-party/folly/folly/portability/SysSyscall.h
        third-party/folly/folly/portability/SysTypes.h
        third-party/folly/folly/Optional.h
        third-party/folly/folly/Utility.h
        third-party/folly/folly/Traits.h
        third-party/folly/folly/synchronization/DistributedMutex.h
        third-party/folly/folly/synchronization/DistributedMutex-inl.h
        third-party/folly/folly/synchronization/ParkingLot.h
        third-party/folly/folly/synchronization/AtomicNotification-inl.h
        third-party/folly/folly/synchronization/detail/ProxyLockable-inl.h
        third-party/folly/folly/synchronization/detail/Spin.h
        third-party/folly/folly/synchronization/detail/InlineFunctionRef.h
        third-party/folly/folly/synchronization/detail/ProxyLockable.h
        third-party/folly/folly/synchronization/detail/Sleeper.h
        third-party/folly/folly/synchronization/WaitOptions.h
        third-party/folly/folly/synchronization/DistributedMutexSpecializations.h
        third-party/folly/folly/synchronization/AtomicNotification.h
        third-party/folly/folly/synchronization/Baton.h
        third-party/folly/folly/synchronization/AtomicUtil.h
        third-party/folly/folly/synchronization/AtomicUtil-inl.h
        third-party/folly/folly/detail/Futex.h
        third-party/folly/folly/detail/Futex-inl.h
        third-party/folly/folly/ConstexprMath.h
        third-party/folly/folly/Indestructible.h
        third-party/folly/folly/hash/Hash.h
        third-party/folly/folly/Portability.h
        third-party/folly/folly/container/Array.h
        third-party/folly/folly/Unit.h
        third-party/folly/folly/chrono/Hardware.h
        third-party/folly/folly/CPortability.h
        third-party/folly/folly/functional/Invoke.h
        third-party/gcc/ppc-asm.h

        utilities/cache_dump_load_impl.h
        utilities/trace/file_trace_reader_writer.h
        utilities/trace/replayer_impl.h
        utilities/cassandra/cassandra_compaction_filter.h
        utilities/cassandra/cassandra_options.h
        utilities/cassandra/test_utils.h
        utilities/cassandra/format.h
        utilities/cassandra/serialize.h
        utilities/cassandra/merge_operator.h
        utilities/env_timed.h
        utilities/merge_operators/sortlist.h
        utilities/merge_operators/bytesxor.h
        utilities/merge_operators/string_append/stringappend2.h
        utilities/merge_operators/string_append/stringappend.h
        utilities/simulator_cache/cache_simulator.h
        utilities/merge_operators.h
        utilities/backupable/backupable_db_impl.h
        utilities/write_batch_with_index/write_batch_with_index_internal.h
        utilities/persistent_cache/block_cache_tier_metadata.h
        utilities/persistent_cache/persistent_cache_test.h
        utilities/persistent_cache/persistent_cache_util.h
        utilities/persistent_cache/hash_table_evictable.h
        utilities/persistent_cache/block_cache_tier_file_buffer.h
        utilities/persistent_cache/block_cache_tier_file.h
        utilities/persistent_cache/volatile_tier_impl.h
        utilities/persistent_cache/block_cache_tier.h
        utilities/persistent_cache/lrulist.h
        utilities/persistent_cache/persistent_cache_tier.h
        utilities/persistent_cache/hash_table.h
        utilities/blob_db/blob_db_iterator.h
        utilities/blob_db/blob_compaction_filter.h
        utilities/blob_db/blob_db_listener.h
        utilities/blob_db/blob_dump_tool.h
        utilities/blob_db/blob_db.h
        utilities/blob_db/blob_db_impl.h
        utilities/blob_db/blob_file.h
        utilities/blob_db/blob_db_gc_stats.h
        utilities/compaction_filters/remove_emptyvalue_compactionfilter.h
        utilities/compaction_filters/layered_compaction_filter_base.h
        utilities/memory_allocators.h
        utilities/checkpoint/checkpoint_impl.h
        utilities/fault_injection_secondary_cache.h
        utilities/fault_injection_env.h
        utilities/transactions/pessimistic_transaction_db.h
        utilities/transactions/write_prepared_txn_db.h
        utilities/transactions/pessimistic_transaction.h
        utilities/transactions/transaction_db_mutex_impl.h
        utilities/transactions/write_unprepared_txn_db.h
        utilities/transactions/optimistic_transaction_db_impl.h
        utilities/transactions/write_prepared_txn.h
        utilities/transactions/transaction_base.h
        utilities/transactions/transaction_util.h
        utilities/transactions/lock/point/point_lock_tracker.h
        utilities/transactions/lock/point/point_lock_manager_test.h
        utilities/transactions/lock/point/point_lock_manager.h
        utilities/transactions/lock/lock_manager.h
        utilities/transactions/lock/range/range_lock_manager.h
        utilities/transactions/lock/range/range_tree/range_tree_lock_manager.h
        utilities/transactions/lock/range/range_tree/lib/db.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_race_tools.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_portability.h
        utilities/transactions/lock/range/range_tree/lib/portability/txn_subst.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_instrumentation.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_assert_subst.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_time.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_atomic.h
        utilities/transactions/lock/range/range_tree/lib/portability/memory.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_external_pthread.h
        utilities/transactions/lock/range/range_tree/lib/portability/toku_pthread.h
        utilities/transactions/lock/range/range_tree/lib/locktree/concurrent_tree.h
        utilities/transactions/lock/range/range_tree/lib/locktree/range_buffer.h
        utilities/transactions/lock/range/range_tree/lib/locktree/lock_request.h
        utilities/transactions/lock/range/range_tree/lib/locktree/treenode.h
        utilities/transactions/lock/range/range_tree/lib/locktree/keyrange.h
        utilities/transactions/lock/range/range_tree/lib/locktree/locktree.h
        utilities/transactions/lock/range/range_tree/lib/locktree/wfg.h
        utilities/transactions/lock/range/range_tree/lib/locktree/txnid_set.h
        utilities/transactions/lock/range/range_tree/lib/util/memarena.h
        utilities/transactions/lock/range/range_tree/lib/util/dbt.h
        utilities/transactions/lock/range/range_tree/lib/util/growable_array.h
        utilities/transactions/lock/range/range_tree/lib/util/partitioned_counter.h
        utilities/transactions/lock/range/range_tree/lib/util/omt_impl.h
        utilities/transactions/lock/range/range_tree/lib/util/status.h
        utilities/transactions/lock/range/range_tree/lib/util/omt.h
        utilities/transactions/lock/range/range_tree/lib/ft/ft-status.h
        utilities/transactions/lock/range/range_tree/lib/ft/comparator.h
        utilities/transactions/lock/range/range_tree/range_tree_lock_tracker.h
        utilities/transactions/lock/lock_tracker.h
        utilities/transactions/write_unprepared_txn.h
        utilities/transactions/transaction_test.h
        utilities/transactions/optimistic_transaction.h
        utilities/fault_injection_fs.h
        utilities/table_properties_collectors/compact_on_deletion_collector.h
        utilities/ttl/db_ttl_impl.h

        memory/memory_usage.h
        memory/memkind_kmem_allocator.h
        memory/concurrent_arena.h
        memory/jemalloc_nodump_allocator.h
        memory/allocator.h
        memory/memory_allocator.h
        memory/arena.h

        trace_replay/block_cache_tracer.h
        trace_replay/io_tracer.h
        trace_replay/trace_record_handler.h
        trace_replay/trace_replay.h

        env/emulated_clock.h
        env/unique_id_gen.h
        env/env_encryption_ctr.h
        env/mock_env.h
        env/fs_readonly.h
        env/composite_env_wrapper.h
        env/io_posix.h
        env/env_chroot.h
        env/file_system_tracer.h
        env/fs_remap.h


        file/delete_scheduler.h
        file/readahead_file_info.h
        file/sequence_file_reader.h
        file/read_write_util.h
        file/random_access_file_reader.h
        file/file_prefetch_buffer.h
        file/filename.h
        file/file_util.h
        file/writable_file_writer.h
        file/sst_file_manager_impl.h
        file/line_file_reader.h
        file/readahead_raf.h

        monitoring/perf_step_timer.h
        monitoring/thread_status_updater.h
        monitoring/in_memory_stats_history.h
        monitoring/file_read_sample.h
        monitoring/statistics.h
        monitoring/histogram_windowing.h
        monitoring/perf_level_imp.h
        monitoring/thread_status_util.h
        monitoring/instrumented_mutex.h
        monitoring/iostats_context_imp.h
        monitoring/histogram.h
        monitoring/persistent_stats_history.h
        monitoring/perf_context_imp.h

        table/get_context.h
        table/multiget_context.h
        table/sst_file_writer_collectors.h
        table/meta_blocks.h
        table/persistent_cache_helper.h
        table/plain/plain_table_index.h
        table/plain/plain_table_builder.h
        table/plain/plain_table_reader.h
        table/plain/plain_table_factory.h
        table/plain/plain_table_bloom.h
        table/plain/plain_table_key_coding.h
        table/table_builder.h
        table/block_fetcher.h
        table/iter_heap.h
        table/sst_file_dumper.h
        table/cuckoo/cuckoo_table_factory.h
        table/cuckoo/cuckoo_table_builder.h
        table/cuckoo/cuckoo_table_reader.h
        table/table_properties_internal.h
        table/table_reader.h
        table/mock_table.h
        table/table_reader_caller.h
        table/persistent_cache_options.h
        table/internal_iterator.h
        table/format.h
        table/block_based/hash_index_reader.h
        table/block_based/block_based_table_reader_impl.h
        table/block_based/partitioned_index_iterator.h
        table/block_based/index_reader_common.h
        table/block_based/data_block_footer.h
        table/block_based/block_builder.h
        table/block_based/binary_search_index_reader.h
        table/block_based/block.h
        table/block_based/block_based_table_builder.h
        table/block_based/block_prefix_index.h
        table/block_based/filter_policy_internal.h
        table/block_based/block_based_filter_block.h
        table/block_based/mock_block_based_table.h
        table/block_based/block_type.h
        table/block_based/partitioned_filter_block.h
        table/block_based/data_block_hash_index.h
        table/block_based/uncompression_dict_reader.h
        table/block_based/block_based_table_iterator.h
        table/block_based/index_builder.h
        table/block_based/filter_block.h
        table/block_based/block_based_table_factory.h
        table/block_based/block_based_table_reader.h
        table/block_based/cachable_entry.h
        table/block_based/block_like_traits.h
        table/block_based/flush_block_policy.h
        table/block_based/partitioned_index_reader.h
        table/block_based/block_prefetcher.h
        table/block_based/full_filter_block.h
        table/block_based/filter_block_reader_common.h
        table/block_based/parsed_full_filter_block.h
        table/block_based/reader_common.h
        table/two_level_iterator.h
        table/merging_iterator.h
        table/unique_id_impl.h
        table/adaptive/adaptive_table_factory.h
        table/scoped_arena_iterator.h
        table/iterator_wrapper.h
        options/cf_options.h
        options/options_helper.h
        options/configurable_test.h
        options/db_options.h
        options/options_parser.h
        options/configurable_helper.h
        db/kv_checksum.h
        db/compaction/compaction_picker.h
        db/compaction/compaction_iterator.h
        db/compaction/compaction_job.h
        db/compaction/compaction_picker_universal.h
        db/compaction/compaction.h
        db/compaction/compaction_picker_fifo.h
        db/compaction/clipping_iterator.h
        db/compaction/compaction_iteration_stats.h
        db/compaction/file_pri.h
        db/compaction/compaction_picker_level.h
        db/pinned_iterators_manager.h
        db/table_properties_collector.h
        db/periodic_work_scheduler.h
        db/transaction_log_impl.h
        db/memtable_list.h
        db/db_info_dumper.h
        db/file_indexer.h
        db/write_thread.h
        db/flush_job.h
        db/arena_wrapped_db_iter.h
        db/db_test_util.h
        db/error_handler.h
        db/snapshot_impl.h
        db/external_sst_file_ingestion_job.h
        db/merge_helper.h
        db/memtable.h
        db/version_edit.h
        db/log_reader.h
        db/table_cache.h
        db/pre_release_callback.h
        db/malloc_stats.h
        db/wal_manager.h
        db/dbformat.h
        db/builder.h
        db/range_tombstone_fragmenter.h
        db/log_format.h
        db/logs_with_prep_tracker.h
        db/column_family.h
        db/write_callback.h
        db/merge_context.h
        db/read_callback.h
        db/job_context.h
        db/event_helpers.h
        db/version_edit_handler.h
        db/db_iter.h
        db/write_batch_internal.h
        db/wal_edit.h
        db/flush_scheduler.h
        db/version_set.h
        db/forward_iterator.h
        db/blob/blob_file_garbage.h
        db/blob/blob_fetcher.h
        db/blob/blob_file_completion_callback.h
        db/blob/blob_file_reader.h
        db/blob/blob_file_addition.h
        db/blob/prefetch_buffer_collection.h
        db/blob/blob_log_format.h
        db/blob/blob_constants.h
        db/blob/blob_index.h
        db/blob/blob_garbage_meter.h
        db/blob/blob_log_writer.h
        db/blob/blob_counting_iterator.h
        db/blob/blob_file_meta.h
        db/blob/blob_file_builder.h
        db/blob/blob_log_sequential_reader.h
        db/blob/blob_file_cache.h
        db/lookup_key.h
        db/internal_stats.h
        db/write_controller.h
        db/snapshot_checker.h
        db/trim_history_scheduler.h
        db/version_builder.h
        db/range_del_aggregator.h
        db/output_validator.h
        db/import_column_family_job.h
        db/log_writer.h
        db/db_impl/db_impl_readonly.h
        db/db_impl/compacted_db_impl.h
        db/db_impl/db_impl_secondary.h
        db/db_impl/db_impl.h
        util/math.h
        util/file_checksum_helper.h
        util/work_queue.h
        util/murmurhash.h
        util/xxph3.h
        util/crc32c_ppc.h
        util/repeatable_thread.h
        util/timer.h
        util/ribbon_config.h
        util/bloom_impl.h
        util/thread_guard.h
        util/ppc-opcode.h
        util/xxhash.h
        util/defer.h
        util/concurrent_task_limiter_impl.h
        util/stop_watch.h
        util/thread_operation.h
        util/heap.h
        util/string_util.h
        util/thread_local.h
        util/coding_lean.h
        util/crc32c_arm64.h
        util/coding.h
        util/ribbon_alg.h
        util/math128.h
        util/fastrange.h
        util/stderr_logger.h
        util/random.h
        util/crc32c_ppc_constants.h
        util/kv_map.h
        util/ribbon_impl.h
        util/compression_context_cache.h
        util/hash_map.h
        util/hash.h
        util/gflags_compat.h
        util/channel.h
        util/vector_iterator.h
        util/user_comparator_wrapper.h
        util/autovector.h
        util/duplicate_detector.h
        util/dynamic_bloom.h
        util/aligned_buffer.h
        util/rate_limiter.h
        util/hash128.h
        util/mutexlock.h
        util/core_local.h
        util/cast_util.h
        util/compression.h
        util/threadpool_imp.h
        util/set_comparator.h
        util/crc32c.h
        util/timer_queue.h
        port/xpress.h
        port/likely.h
        port/util_logger.h
        port/port_example.h
        port/jemalloc_helper.h
        port/port_dirent.h
        port/malloc.h
        port/sys_time.h
        port/stack_trace.h
        port/port_posix.h
        port/lang.h
        port/win/win_logger.h
        port/win/xpress_win.h
        port/win/env_win.h
        port/win/win_thread.h
        port/win/io_win.h
        port/win/port_win.h
        port/port.h
        cache/cache_entry_roles.h
        cache/cache_key.h
        cache/lru_cache.h
        cache/cache_entry_stats.h
        cache/cache_reservation_manager.h
        cache/sharded_cache.h
        cache/cache_helpers.h
        cache/clock_cache.h
        rocksdb/advanced_options.h
        rocksdb/cache_bench_tool.h
        rocksdb/cache.h
        rocksdb/c.h
        rocksdb/cleanable.h
        rocksdb/compaction_filter.h
        rocksdb/compaction_job_stats.h
        rocksdb/comparator.h
        rocksdb/compression_type.h
        rocksdb/concurrent_task_limiter.h
        rocksdb/configurable.h
        rocksdb/convenience.h
        rocksdb/customizable.h
        rocksdb/data_structure.h
        rocksdb/db_bench_tool.h
        rocksdb/db_dump_tool.h
        rocksdb/db.h
        rocksdb/db_stress_tool.h
        rocksdb/env_encryption.h
        rocksdb/env.h
        rocksdb/experimental.h
        rocksdb/file_checksum.h
        rocksdb/file_system.h
        rocksdb/filter_policy.h
        rocksdb/flush_block_policy.h
        rocksdb/functor_wrapper.h
        rocksdb/iostats_context.h
        rocksdb/io_status.h
        rocksdb/iterator.h
        rocksdb/ldb_tool.h
        rocksdb/listener.h
        rocksdb/memory_allocator.h
        rocksdb/memtablerep.h
        rocksdb/merge_operator.h
        rocksdb/metadata.h
        rocksdb/options.h
        rocksdb/perf_context.h
        rocksdb/perf_level.h
        rocksdb/persistent_cache.h
        rocksdb/rate_limiter.h
        rocksdb/rocksdb_namespace.h
        rocksdb/secondary_cache.h
        rocksdb/slice.h
        rocksdb/slice_transform.h
        rocksdb/snapshot.h
        rocksdb/sst_dump_tool.h
        rocksdb/sst_file_manager.h
        rocksdb/sst_file_reader.h
        rocksdb/sst_file_writer.h
        rocksdb/sst_partitioner.h
        rocksdb/statistics.h
        rocksdb/stats_history.h
        rocksdb/status.h
        rocksdb/system_clock.h
        rocksdb/table.h
        rocksdb/table_properties.h
        rocksdb/threadpool.h
        rocksdb/thread_status.h
        rocksdb/trace_reader_writer.h
        rocksdb/trace_record.h
        rocksdb/trace_record_result.h
        rocksdb/transaction_log.h
        rocksdb/types.h
        rocksdb/unique_id.h
        rocksdb/universal_compaction.h
        rocksdb/utilities/backupable_db.h
        rocksdb/utilities/backup_engine.h
        rocksdb/utilities/cache_dump_load.h
        rocksdb/utilities/checkpoint.h
        rocksdb/utilities/convenience.h
        rocksdb/utilities/customizable_util.h
        rocksdb/utilities/db_ttl.h
        rocksdb/utilities/debug.h
        rocksdb/utilities/env_librados.h
        rocksdb/utilities/env_mirror.h
        rocksdb/utilities/info_log_finder.h
        rocksdb/utilities/ldb_cmd_execute_result.h
        rocksdb/utilities/ldb_cmd.h
        rocksdb/utilities/leveldb_options.h
        rocksdb/utilities/memory_util.h
        rocksdb/utilities/object_registry.h
        rocksdb/utilities/optimistic_transaction_db.h
        rocksdb/utilities/option_change_migration.h
        rocksdb/utilities/options_type.h
        rocksdb/utilities/options_util.h
        rocksdb/utilities/regex.h
        rocksdb/utilities/replayer.h
        rocksdb/utilities/sim_cache.h
        rocksdb/utilities/stackable_db.h
        rocksdb/utilities/table_properties_collectors.h
        rocksdb/utilities/transaction_db.h
        rocksdb/utilities/transaction_db_mutex.h
        rocksdb/utilities/transaction.h
        rocksdb/utilities/utility_db.h
        rocksdb/utilities/write_batch_with_index.h
        rocksdb/version.h
        rocksdb/wal_filter.h
        rocksdb/write_batch_base.h
        rocksdb/write_batch.h
        rocksdb/write_buffer_manager.h


    -- These options are extracted from CXXFLAGS the RocksDB Makefile
    cxx-options:
        -fno-rtti
        -g
        -W
        -Wextra
        -Wall
        -Wsign-compare
        -Wshadow
        -Wunused-parameter
        -Werror
        -std=c++11
        -faligned-new
        -DHAVE_ALIGNED_NEW
        -DROCKSDB_PLATFORM_POSIX
        -DROCKSDB_LIB_IO_POSIX
        -DSNAPPY
        -DGFLAGS=1
        -DZLIB
        -DBZIP2
        -DTBB
        -DROCKSDB_BACKTRACE
        -march=native
        -DHAVE_SSE42
        -DHAVE_PCLMUL
        -DHAVE_AVX2
        -DHAVE_BMI
        -DHAVE_LZCNT
        -DHAVE_UINT128_EXTENSION
        -DROCKSDB_SUPPORT_THREAD_LOCAL
        -fno-omit-frame-pointer
        -momit-leaf-frame-pointer
        -DNDEBUG
        -Woverloaded-virtual
        -Wnon-virtual-dtor
        -Wno-missing-field-initializers
        -- -O2

    if os(linux)
        cxx-options:
            -DOS_LINUX
            -fno-builtin-memcmp
            -DROCKSDB_FALLOCATE_PRESENT
            -DROCKSDB_MALLOC_USABLE_SIZE
            -DROCKSDB_PTHREAD_ADAPTIVE_MUTEX
            -DROCKSDB_RANGESYNC_PRESENT
            -DROCKSDB_SCHED_GETCPU_PRESENT
            -DROCKSDB_AUXV_GETAUXVAL_PRESENT

    if os(darwin)
        cxx-options:
            -DOS_MACOSX
            -Wshorten-64-to-32
            -DHAVE_FULLFSYNC

    -- These sources are extracted from LIB_OBJECTS the RocksDB Makefile
    cxx-sources:
        rocksdb/cache/cache.cc
        rocksdb/cache/cache_entry_roles.cc
        rocksdb/cache/cache_key.cc
        rocksdb/cache/cache_reservation_manager.cc
        rocksdb/cache/clock_cache.cc
        rocksdb/cache/lru_cache.cc
        rocksdb/cache/sharded_cache.cc
        rocksdb/db/arena_wrapped_db_iter.cc
        rocksdb/db/blob/blob_fetcher.cc
        rocksdb/db/blob/blob_file_addition.cc
        rocksdb/db/blob/blob_file_builder.cc
        rocksdb/db/blob/blob_file_cache.cc
        rocksdb/db/blob/blob_file_garbage.cc
        rocksdb/db/blob/blob_file_meta.cc
        rocksdb/db/blob/blob_file_reader.cc
        rocksdb/db/blob/blob_garbage_meter.cc
        rocksdb/db/blob/blob_log_format.cc
        rocksdb/db/blob/blob_log_sequential_reader.cc
        rocksdb/db/blob/blob_log_writer.cc
        rocksdb/db/blob/prefetch_buffer_collection.cc
        rocksdb/db/builder.cc
        rocksdb/db/c.cc
        rocksdb/db/column_family.cc
        rocksdb/db/compaction/compaction.cc
        rocksdb/db/compaction/compaction_iterator.cc
        rocksdb/db/compaction/compaction_job.cc
        rocksdb/db/compaction/compaction_picker.cc
        rocksdb/db/compaction/compaction_picker_fifo.cc
        rocksdb/db/compaction/compaction_picker_level.cc
        rocksdb/db/compaction/compaction_picker_universal.cc
        rocksdb/db/compaction/sst_partitioner.cc
        rocksdb/db/convenience.cc
        rocksdb/db/db_filesnapshot.cc
        rocksdb/db/db_impl/compacted_db_impl.cc
        rocksdb/db/db_impl/db_impl.cc
        rocksdb/db/db_impl/db_impl_compaction_flush.cc
        rocksdb/db/db_impl/db_impl_experimental.cc
        rocksdb/db/db_impl/db_impl_files.cc
        rocksdb/db/db_impl/db_impl_open.cc
        rocksdb/db/db_impl/db_impl_readonly.cc
        rocksdb/db/db_impl/db_impl_secondary.cc
        rocksdb/db/db_impl/db_impl_write.cc
        rocksdb/db/db_info_dumper.cc
        rocksdb/db/db_iter.cc
        rocksdb/db/dbformat.cc
        rocksdb/db/error_handler.cc
        rocksdb/db/event_helpers.cc
        rocksdb/db/experimental.cc
        rocksdb/db/external_sst_file_ingestion_job.cc
        rocksdb/db/file_indexer.cc
        rocksdb/db/flush_job.cc
        rocksdb/db/flush_scheduler.cc
        rocksdb/db/forward_iterator.cc
        rocksdb/db/import_column_family_job.cc
        rocksdb/db/internal_stats.cc
        rocksdb/db/logs_with_prep_tracker.cc
        rocksdb/db/log_reader.cc
        rocksdb/db/log_writer.cc
        rocksdb/db/malloc_stats.cc
        rocksdb/db/memtable.cc
        rocksdb/db/memtable_list.cc
        rocksdb/db/merge_helper.cc
        rocksdb/db/merge_operator.cc
        rocksdb/db/output_validator.cc
        rocksdb/db/periodic_work_scheduler.cc
        rocksdb/db/range_del_aggregator.cc
        rocksdb/db/range_tombstone_fragmenter.cc
        rocksdb/db/repair.cc
        rocksdb/db/snapshot_impl.cc
        rocksdb/db/table_cache.cc
        rocksdb/db/table_properties_collector.cc
        rocksdb/db/transaction_log_impl.cc
        rocksdb/db/trim_history_scheduler.cc
        rocksdb/db/version_builder.cc
        rocksdb/db/version_edit.cc
        rocksdb/db/version_edit_handler.cc
        rocksdb/db/version_set.cc
        rocksdb/db/wal_edit.cc
        rocksdb/db/wal_manager.cc
        rocksdb/db/write_batch.cc
        rocksdb/db/write_batch_base.cc
        rocksdb/db/write_controller.cc
        rocksdb/db/write_thread.cc
        rocksdb/env/composite_env.cc
        rocksdb/env/env.cc
        rocksdb/env/env_chroot.cc
        rocksdb/env/env_encryption.cc
        rocksdb/env/env_hdfs.cc
        rocksdb/env/env_posix.cc
        rocksdb/env/file_system.cc
        rocksdb/env/fs_posix.cc
        rocksdb/env/fs_remap.cc
        rocksdb/env/file_system_tracer.cc
        rocksdb/env/io_posix.cc
        rocksdb/env/mock_env.cc
        rocksdb/env/unique_id_gen.cc
        rocksdb/file/delete_scheduler.cc
        rocksdb/file/file_prefetch_buffer.cc
        rocksdb/file/file_util.cc
        rocksdb/file/filename.cc
        rocksdb/file/line_file_reader.cc
        rocksdb/file/random_access_file_reader.cc
        rocksdb/file/read_write_util.cc
        rocksdb/file/readahead_raf.cc
        rocksdb/file/sequence_file_reader.cc
        rocksdb/file/sst_file_manager_impl.cc
        rocksdb/file/writable_file_writer.cc
        rocksdb/logging/auto_roll_logger.cc
        rocksdb/logging/event_logger.cc
        rocksdb/logging/log_buffer.cc
        rocksdb/memory/arena.cc
        rocksdb/memory/concurrent_arena.cc
        rocksdb/memory/jemalloc_nodump_allocator.cc
        rocksdb/memory/memkind_kmem_allocator.cc
        rocksdb/memory/memory_allocator.cc
        rocksdb/memtable/alloc_tracker.cc
        rocksdb/memtable/hash_linklist_rep.cc
        rocksdb/memtable/hash_skiplist_rep.cc
        rocksdb/memtable/skiplistrep.cc
        rocksdb/memtable/vectorrep.cc
        rocksdb/memtable/write_buffer_manager.cc
        rocksdb/monitoring/histogram.cc
        rocksdb/monitoring/histogram_windowing.cc
        rocksdb/monitoring/in_memory_stats_history.cc
        rocksdb/monitoring/instrumented_mutex.cc
        rocksdb/monitoring/iostats_context.cc
        rocksdb/monitoring/perf_context.cc
        rocksdb/monitoring/perf_level.cc
        rocksdb/monitoring/persistent_stats_history.cc
        rocksdb/monitoring/statistics.cc
        rocksdb/monitoring/thread_status_impl.cc
        rocksdb/monitoring/thread_status_updater.cc
        rocksdb/monitoring/thread_status_updater_debug.cc
        rocksdb/monitoring/thread_status_util.cc
        rocksdb/monitoring/thread_status_util_debug.cc
        rocksdb/options/cf_options.cc
        rocksdb/options/configurable.cc
        rocksdb/options/customizable.cc
        rocksdb/options/db_options.cc
        rocksdb/options/options.cc
        rocksdb/options/options_helper.cc
        rocksdb/options/options_parser.cc
        rocksdb/port/port_posix.cc
        rocksdb/port/stack_trace.cc
        rocksdb/table/adaptive/adaptive_table_factory.cc
        rocksdb/table/block_based/binary_search_index_reader.cc
        rocksdb/table/block_based/block.cc
        rocksdb/table/block_based/block_based_filter_block.cc
        rocksdb/table/block_based/block_based_table_builder.cc
        rocksdb/table/block_based/block_based_table_factory.cc
        rocksdb/table/block_based/block_based_table_iterator.cc
        rocksdb/table/block_based/block_based_table_reader.cc
        rocksdb/table/block_based/block_builder.cc
        rocksdb/table/block_based/block_prefetcher.cc
        rocksdb/table/block_based/block_prefix_index.cc
        rocksdb/table/block_based/data_block_hash_index.cc
        rocksdb/table/block_based/data_block_footer.cc
        rocksdb/table/block_based/filter_block_reader_common.cc
        rocksdb/table/block_based/filter_policy.cc
        rocksdb/table/block_based/flush_block_policy.cc
        rocksdb/table/block_based/full_filter_block.cc
        rocksdb/table/block_based/hash_index_reader.cc
        rocksdb/table/block_based/index_builder.cc
        rocksdb/table/block_based/index_reader_common.cc
        rocksdb/table/block_based/parsed_full_filter_block.cc
        rocksdb/table/block_based/partitioned_filter_block.cc
        rocksdb/table/block_based/partitioned_index_iterator.cc
        rocksdb/table/block_based/partitioned_index_reader.cc
        rocksdb/table/block_based/reader_common.cc
        rocksdb/table/block_based/uncompression_dict_reader.cc
        rocksdb/table/block_fetcher.cc
        rocksdb/table/cuckoo/cuckoo_table_builder.cc
        rocksdb/table/cuckoo/cuckoo_table_factory.cc
        rocksdb/table/cuckoo/cuckoo_table_reader.cc
        rocksdb/table/format.cc
        rocksdb/table/get_context.cc
        rocksdb/table/iterator.cc
        rocksdb/table/merging_iterator.cc
        rocksdb/table/meta_blocks.cc
        rocksdb/table/persistent_cache_helper.cc
        rocksdb/table/plain/plain_table_bloom.cc
        rocksdb/table/plain/plain_table_builder.cc
        rocksdb/table/plain/plain_table_factory.cc
        rocksdb/table/plain/plain_table_index.cc
        rocksdb/table/plain/plain_table_key_coding.cc
        rocksdb/table/plain/plain_table_reader.cc
        rocksdb/table/sst_file_dumper.cc
        rocksdb/table/sst_file_reader.cc
        rocksdb/table/sst_file_writer.cc
        rocksdb/table/table_factory.cc
        rocksdb/table/table_properties.cc
        rocksdb/table/two_level_iterator.cc
        rocksdb/table/unique_id.cc
        rocksdb/test_util/sync_point.cc
        rocksdb/test_util/sync_point_impl.cc
        rocksdb/test_util/transaction_test_util.cc
        rocksdb/tools/dump/db_dump_tool.cc
        rocksdb/trace_replay/trace_record_handler.cc
        rocksdb/trace_replay/trace_record_result.cc
        rocksdb/trace_replay/trace_record.cc
        rocksdb/trace_replay/trace_replay.cc
        rocksdb/trace_replay/block_cache_tracer.cc
        rocksdb/trace_replay/io_tracer.cc
        rocksdb/util/build_version.cc
        rocksdb/util/coding.cc
        rocksdb/util/compaction_job_stats_impl.cc
        rocksdb/util/comparator.cc
        rocksdb/util/compression_context_cache.cc
        rocksdb/util/concurrent_task_limiter_impl.cc
        rocksdb/util/crc32c.cc
        rocksdb/util/dynamic_bloom.cc
        rocksdb/util/hash.cc
        rocksdb/util/murmurhash.cc
        rocksdb/util/random.cc
        rocksdb/util/rate_limiter.cc
        rocksdb/util/ribbon_config.cc
        rocksdb/util/regex.cc
        rocksdb/util/slice.cc
        rocksdb/util/file_checksum_helper.cc
        rocksdb/util/status.cc
        rocksdb/util/string_util.cc
        rocksdb/util/thread_local.cc
        rocksdb/util/threadpool_imp.cc
        rocksdb/util/xxhash.cc
        rocksdb/utilities/backupable/backupable_db.cc
        rocksdb/utilities/blob_db/blob_compaction_filter.cc
        rocksdb/utilities/blob_db/blob_db.cc
        rocksdb/utilities/blob_db/blob_db_impl.cc
        rocksdb/utilities/blob_db/blob_db_impl_filesnapshot.cc
        rocksdb/utilities/blob_db/blob_file.cc
        rocksdb/utilities/cache_dump_load.cc
        rocksdb/utilities/cache_dump_load_impl.cc
        rocksdb/utilities/cassandra/cassandra_compaction_filter.cc
        rocksdb/utilities/cassandra/format.cc
        rocksdb/utilities/cassandra/merge_operator.cc
        rocksdb/utilities/checkpoint/checkpoint_impl.cc
        rocksdb/utilities/compaction_filters.cc
        rocksdb/utilities/compaction_filters/remove_emptyvalue_compactionfilter.cc
        rocksdb/utilities/convenience/info_log_finder.cc
        rocksdb/utilities/debug.cc
        rocksdb/utilities/env_mirror.cc
        rocksdb/utilities/env_timed.cc
        rocksdb/utilities/fault_injection_env.cc
        rocksdb/utilities/fault_injection_fs.cc
        rocksdb/utilities/fault_injection_secondary_cache.cc
        rocksdb/utilities/leveldb_options/leveldb_options.cc
        rocksdb/utilities/memory/memory_util.cc
        rocksdb/utilities/merge_operators.cc
        rocksdb/utilities/merge_operators/max.cc
        rocksdb/utilities/merge_operators/put.cc
        rocksdb/utilities/merge_operators/sortlist.cc
        rocksdb/utilities/merge_operators/string_append/stringappend.cc
        rocksdb/utilities/merge_operators/string_append/stringappend2.cc
        rocksdb/utilities/merge_operators/uint64add.cc
        rocksdb/utilities/merge_operators/bytesxor.cc
        rocksdb/utilities/object_registry.cc
        rocksdb/utilities/option_change_migration/option_change_migration.cc
        rocksdb/utilities/options/options_util.cc
        rocksdb/utilities/persistent_cache/block_cache_tier.cc
        rocksdb/utilities/persistent_cache/block_cache_tier_file.cc
        rocksdb/utilities/persistent_cache/block_cache_tier_metadata.cc
        rocksdb/utilities/persistent_cache/persistent_cache_tier.cc
        rocksdb/utilities/persistent_cache/volatile_tier_impl.cc
        rocksdb/utilities/simulator_cache/cache_simulator.cc
        rocksdb/utilities/simulator_cache/sim_cache.cc
        rocksdb/utilities/table_properties_collectors/compact_on_deletion_collector.cc
        rocksdb/utilities/trace/file_trace_reader_writer.cc
        rocksdb/utilities/trace/replayer_impl.cc
        rocksdb/utilities/transactions/lock/lock_manager.cc
        rocksdb/utilities/transactions/lock/point/point_lock_tracker.cc
        rocksdb/utilities/transactions/lock/point/point_lock_manager.cc
        rocksdb/utilities/transactions/optimistic_transaction.cc
        rocksdb/utilities/transactions/optimistic_transaction_db_impl.cc
        rocksdb/utilities/transactions/pessimistic_transaction.cc
        rocksdb/utilities/transactions/pessimistic_transaction_db.cc
        rocksdb/utilities/transactions/snapshot_checker.cc
        rocksdb/utilities/transactions/transaction_base.cc
        rocksdb/utilities/transactions/transaction_db_mutex_impl.cc
        rocksdb/utilities/transactions/transaction_util.cc
        rocksdb/utilities/transactions/write_prepared_txn.cc
        rocksdb/utilities/transactions/write_prepared_txn_db.cc
        rocksdb/utilities/transactions/write_unprepared_txn.cc
        rocksdb/utilities/transactions/write_unprepared_txn_db.cc
        rocksdb/utilities/ttl/db_ttl_impl.cc
        rocksdb/utilities/wal_filter.cc
        rocksdb/utilities/write_batch_with_index/write_batch_with_index.cc
        rocksdb/utilities/write_batch_with_index/write_batch_with_index_internal.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/concurrent_tree.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/keyrange.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/lock_request.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/locktree.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/manager.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/range_buffer.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/treenode.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/txnid_set.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/locktree/wfg.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/standalone_port.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/util/dbt.cc
        rocksdb/utilities/transactions/lock/range/range_tree/lib/util/memarena.cc
        rocksdb/utilities/transactions/lock/range/range_tree/range_tree_lock_manager.cc
        rocksdb/utilities/transactions/lock/range/range_tree/range_tree_lock_tracker.cc

    if os(windows)
        cxx-sources:
            rocksdb/port/win/env_default.cc
            rocksdb/port/win/env_win.cc
            rocksdb/port/win/io_win.cc
            rocksdb/port/win/port_win.cc
            rocksdb/port/win/win_logger.cc
            rocksdb/port/win/win_thread.cc


test-suite rocksdb-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: Main.hs
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    other-modules:
    build-depends:
        -- internal
        , chainweb-storage

        -- external
        , async >=2.2
        , base >=4.10 && <4.16
        , bytestring >=0.10
        , exceptions >=0.10
        , lens >=4.16
        , nothunks >= 0.1.0.0
        , vector >=0.12

custom-setup
  setup-depends:
      base  >= 4.12
    , Cabal >= 3.0.0.0
    , containers
    , directory
    , filepath
